thjeshtim i me tejshem-largim i kkodit te perseritur